# yoyopod-core

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  BUILD.bazel  LICENSE  MODULE.bazel  README.md  codex.md  defs.bzl  pi-deploy.yaml  pyproject.toml  requirements.txt  sitecustomize.py  yoyopod.py
cli/: Cargo.toml  README.md
cli/yoyopod/: Cargo.toml
cli/yoyopod/src/: cli.rs  deploy_config.rs  local.rs  logging.rs  main.rs  paths.rs  quoting.rs  repo.rs  ssh.rs
device/: BUILD.bazel
device/cloud/: BUILD.bazel  Cargo.toml
device/cloud/src/: config.rs  main.rs  mqtt.rs  snapshot.rs  worker.rs
device/cloud/tests/: config.rs  worker.rs
device/harness/: BUILD.bazel  Cargo.toml
device/harness/src/: lib.rs
device/media/: BUILD.bazel
device/media/src/: main.rs  mpv_ipc.rs  recents.rs  worker.rs
device/media/tests/: mpv_process.rs  protocol.rs  remote_media.rs
device/network/: BUILD.bazel
device/network/src/: at.rs  config.rs  lib.rs  modem.rs  protocol.rs  snapshot.rs  transport.rs
device/network/tests/: README.md  config.rs  gps.rs  runtime_snapshot.rs  worker.rs
device/power/: BUILD.bazel
device/power/src/: config.rs  host.rs  protocol.rs  worker.rs
device/power/tests/: config.rs  snapshot.rs  worker.rs
device/protocol/: BUILD.bazel  Cargo.toml
device/protocol/src/: lib.rs
device/runtime/: BUILD.bazel  Cargo.toml
device/runtime/src/: cli.rs  config.rs  event.rs  lib.rs  logging.rs  main.rs  protocol.rs  runtime_loop.rs  state.rs  status.rs  voice.rs  worker.rs
device/runtime/tests/: cli.rs  config.rs  event.rs  protocol.rs  runtime_loop.rs  smoke.rs  state.rs  voice.rs  worker.rs
device/speech/: BUILD.bazel
device/speech/src/: lib.rs  main.rs  provider.rs  worker.rs
device/speech/tests/: protocol.rs  worker.rs
device/ui/: ARCHITECTURE_AUDIT.html  BUILD.bazel  Cargo.toml  UI_ARCH_SKELETON.html  build.rs  phase1_goal.md  phase2_goal.md  phase3_goal.md
device/ui/assets/: layouts.ron  scenes.ron  theme.ron
device/ui/src/: hub.rs  lib.rs  main.rs  protocol.rs  render_contract.rs  roles.rs  worker.rs
device/ui/src/app/: core.rs  (+6 more)
device/ui/tests/: README.md  framebuffer.rs  hardware_whisplay.rs  render_lvgl.rs  whisplay_panel.rs  worker.rs
device/voip/: BUILD.bazel  build.rs
device/voip/src/: calls.rs  lib.rs  playback.rs  runtime_snapshot.rs  worker.rs
device/voip/tests/: calls.rs  config.rs  events.rs  history.rs  liblinphone.rs  lifecycle.rs  message_store.rs  runtime_snapshot.rs  worker.rs
device/worker/: BUILD.bazel
device/worker/src/: lib.rs
device/worker/tests/: io.rs
src/ui-host/: BUILD.bazel  Cargo.toml
src/ui-host/src/: framebuffer.rs  hub.rs  input.rs  lib.rs  lvgl_bridge.rs  main.rs  protocol.rs  whisplay_panel.rs  worker.rs
src/ui-host/tests/: framebuffer.rs  hardware_whisplay.rs  hub.rs  input.rs  lvgl_bridge.rs  protocol.rs  render_framebuffer.rs  render_lvgl.rs  runtime_state_machine.rs  whisplay_panel.rs  worker.rs
src/voip-host/: BUILD.bazel  Cargo.toml
src/voip-host/src/: config.rs  host.rs  lib.rs  main.rs  protocol.rs  shim.rs  worker.rs
src/voip-host/tests/: README.md  config.rs  events.rs  host.rs  protocol.rs  shim.rs  worker.rs
yoyopod_rs/: BUILD.bazel  Cargo.toml
yoyopod_rs/cloud/: BUILD.bazel
yoyopod_rs/cloud-host/: Cargo.toml
yoyopod_rs/cloud/src/: host.rs  lib.rs  main.rs  protocol.rs
yoyopod_rs/harness/: BUILD.bazel
yoyopod_rs/liblinphone-shim/: BUILD.bazel  Cargo.toml
yoyopod_rs/liblinphone-shim/src/: event.rs  ffi.rs  lib.rs  state.rs
yoyopod_rs/liblinphone-shim/tests/: abi.rs  event_queue.rs
yoyopod_rs/media/: BUILD.bazel  Cargo.toml
yoyopod_rs/media-host/: BUILD.bazel  Cargo.toml
yoyopod_rs/media-host/src/: events.rs  host.rs  lib.rs  worker.rs
yoyopod_rs/media-host/tests/: host.rs  mpv_ipc.rs  mpv_process.rs  worker.rs
yoyopod_rs/media/src/: config.rs  host.rs  lib.rs  library.rs  models.rs  mpv_process.rs  remote_cache.rs  remote_media.rs
yoyopod_rs/media/tests/: config.rs  host.rs  library.rs  mpv_ipc.rs  recents.rs  remote_cache.rs  worker.rs
yoyopod_rs/network/: BUILD.bazel  Cargo.toml
yoyopod_rs/network-host/: Cargo.toml
yoyopod_rs/network-host/src/: runtime.rs  worker.rs
yoyopod_rs/network-host/tests/: lifecycle.rs  worker.rs
yoyopod_rs/network/src/: config.rs  gps.rs  main.rs  modem.rs  ppp.rs  runtime.rs  worker.rs
yoyopod_rs/network/tests/: lifecycle.rs  ppp.rs  protocol.rs
yoyopod_rs/power/: BUILD.bazel  Cargo.toml
yoyopod_rs/power-host/: BUILD.bazel  Cargo.toml
yoyopod_rs/power-host/src/: main.rs  protocol.rs  worker.rs
yoyopod_rs/power-host/tests/: config.rs  snapshot.rs  worker.rs
yoyopod_rs/power/src/: lib.rs  main.rs  snapshot.rs
yoyopod_rs/protocol/src/: lib.rs
yoyopod_rs/protocol/tests/: envelope.rs
yoyopod_rs/runtime/: BUILD.bazel
yoyopod_rs/runtime/src/: cli.rs  config.rs  event.rs  protocol.rs  state.rs
yoyopod_rs/runtime/tests/: cli.rs  config.rs  event.rs  protocol.rs  state.rs
yoyopod_rs/speech/: BUILD.bazel  Cargo.toml
yoyopod_rs/speech-host/: Cargo.toml
yoyopod_rs/speech-host/tests/: worker.rs
yoyopod_rs/speech/src/: protocol.rs
yoyopod_rs/speech/tests/: openai_provider.rs
yoyopod_rs/ui/: BUILD.bazel
yoyopod_rs/ui-host/: Cargo.toml
yoyopod_rs/ui-host/src/: input.rs  worker.rs
yoyopod_rs/ui-host/tests/: input.rs  render_lvgl.rs  runtime_state_machine.rs  worker.rs
yoyopod_rs/ui/src/: framebuffer.rs  worker.rs
yoyopod_rs/ui/tests/: hub.rs  input.rs  lvgl_runtime.rs  protocol.rs  render_framebuffer.rs  runtime_state_machine.rs
yoyopod_rs/voip/: BUILD.bazel  Cargo.toml
yoyopod_rs/voip-host/: BUILD.bazel  Cargo.toml  build.rs
yoyopod_rs/voip-host/src/: host.rs  lib.rs  playback.rs  shim.rs  worker.rs
yoyopod_rs/voip-host/tests/: history.rs  host.rs  playback.rs  runtime_snapshot.rs  shim.rs  worker.rs
yoyopod_rs/voip/src/: config.rs  events.rs  history.rs  host.rs  lifecycle.rs  main.rs  message_store.rs  messages.rs  voice_notes.rs
yoyopod_rs/voip/tests/: host.rs  messages.rs  playback.rs  protocol.rs  voice_notes.rs
yoyopod_rs/worker/: BUILD.bazel  Cargo.toml
(+1542 files in other folders)
