[project]
name = "yoyopod"
dynamic = ["version"]
description = "YoYoPod integrated VoIP and local-first mpv player for Raspberry Pi"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "YoYoPod Team" }
]
keywords = ["yoyopod", "raspberry-pi", "voip", "mpv", "audio-player", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
urls = { Repository = "https://github.com/moustafattia/yoyopod-core", Issues = "https://github.com/moustafattia/yoyopod-core/issues" }

dependencies = [
    "loguru>=0.7.0",
    "gpiod<2; platform_system == 'Linux'",
    "pyyaml>=6.0.3",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-PyYAML",
    "pyinstrument>=5.0.0",
    "pyperf>=2.8.0",
    "py-spy>=0.4.1",
]

[project.scripts]
yoyopod = "yoyopod_cli.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "yoyopod_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["yoyopod_cli"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/pyproject.toml",
    "/yoyopod_cli",
]
exclude = [
    "/.worktrees",
    "/dist",
    "/logs",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.contacts_integration"
disable_error_code = ["no-any-return"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.contacts_integration.directory"
disable_error_code = ["no-untyped-def"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.contacts_integration.handlers"
disable_error_code = ["call-overload", "no-any-return"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.gpiod_compat"
disable_error_code = ["import-not-found", "no-any-return", "no-redef"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.power_backend.pisugar"
disable_error_code = ["attr-defined", "no-untyped-def"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.power_integration"
disable_error_code = ["arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.power_integration.poller"
disable_error_code = ["attr-defined", "no-any-return"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.power_integration.service"
disable_error_code = ["misc"]

[[tool.mypy.overrides]]
module = "yoyopod_cli.pi.support.voip_backend.rust_host"
disable_error_code = ["arg-type"]

[tool.yoyopod_quality]
gate_format_paths = [
    "scripts/quality.py",
    "yoyopod_cli",
]
gate_lint_paths = [
    "scripts/quality.py",
    "yoyopod_cli",
]
gate_type_paths = [
    "scripts/quality.py",
    "yoyopod_cli",
]
audit_format_paths = ["."]
audit_lint_paths = ["."]
audit_type_paths = ["yoyopod_cli"]
