[workspace]
resolver = "2"
members = ["yoyopod"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/moustafattia/yoyopod-core"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
