package(default_visibility = ["//visibility:public"])

alias(
    name = "ui-host",
    actual = "//yoyopod_rs/ui-host:yoyopod-ui-host",
)

alias(
    name = "voip-host",
    actual = "//yoyopod_rs/voip-host:yoyopod-voip-host",
)

alias(
    name = "liblinphone-shim",
    actual = "//yoyopod_rs/liblinphone-shim:liblinphone_shim_lib",
)
