package(default_visibility = ["//visibility:public"])

alias(
    name = "media-host",
    actual = "//yoyopod_rs/media-host:yoyopod-media-host",
)

alias(
    name = "cloud-host",
    actual = "//yoyopod_rs/cloud-host:yoyopod-cloud-host",
)

alias(
    name = "power-host",
    actual = "//yoyopod_rs/power-host:yoyopod-power-host",
)

alias(
    name = "ui-host",
    actual = "//yoyopod_rs/ui-host:yoyopod-ui-host",
)

alias(
    name = "voip-host",
    actual = "//yoyopod_rs/voip-host:yoyopod-voip-host",
)

alias(
    name = "runtime",
    actual = "//yoyopod_rs/runtime:yoyopod-runtime",
)
