[package]
name = "yoyopod"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YoYoPod operator CLI: dev-machine to Pi orchestration."

[[bin]]
name = "yoyopod"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
shell-escape = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
