[package]
name = "yoyopod-cloud"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "yoyopod-cloud-host"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rumqttc = { version = "0.25", features = ["websocket", "url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
yoyopod-protocol = { path = "../protocol" }

[dev-dependencies]
yoyopod-harness = { path = "../harness" }
