load(
    "//:defs.bzl",
    "yoyopod_rust_host_binary",
    "yoyopod_rust_host_library",
)

yoyopod_rust_host_library(
    name = "media_host_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_name = "yoyopod_media",
    deps = ["//device/protocol:protocol_lib"],
)

yoyopod_rust_host_binary(
    name = "yoyopod-media-host",
    srcs = ["src/main.rs"],
    deps = [":media_host_lib"],
)