load(
    "//:defs.bzl",
    "yoyopod_rust_host_binary",
    "yoyopod_rust_host_library",
)

yoyopod_rust_host_library(
    name = "network_host_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_name = "yoyopod_network",
    deps = ["//device/protocol:protocol_lib"],
)

yoyopod_rust_host_binary(
    name = "yoyopod-network-host",
    srcs = ["src/main.rs"],
    deps = [":network_host_lib"],
)