load(
    "//:defs.bzl",
    "yoyopod_rust_host_binary",
    "yoyopod_rust_host_integration_tests",
    "yoyopod_rust_host_library",
)

yoyopod_rust_host_library(
    name = "voip_host_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_name = "yoyopod_voip",
    deps = ["//device/protocol:protocol_lib"],
)

yoyopod_rust_host_binary(
    name = "yoyopod-voip-host",
    srcs = ["src/main.rs"],
    deps = [":voip_host_lib"],
)

VOIP_HOST_TESTS = [
    "calls",
    "config",
    "events",
    "history",
    "host",
    "liblinphone",
    "lifecycle",
    "message_store",
    "messages",
    "playback",
    "protocol",
    "runtime_snapshot",
    "voice_notes",
    "worker",
]

yoyopod_rust_host_integration_tests(
    name = "tests",
    tests = VOIP_HOST_TESTS,
    deps = [
        ":voip_host_lib",
        "//device/harness:harness_lib",
    ],
    extra_srcs_by_test = {
        "host": ["tests/support/mod.rs"],
        "worker": ["tests/support/mod.rs"],
    },
)
