load(
    "//:defs.bzl",
    "yoyopod_rust_host_integration_tests",
    "yoyopod_rust_host_library",
)

yoyopod_rust_host_library(
    name = "liblinphone_shim_lib",
    srcs = glob(["src/**/*.rs"]),
    crate_name = "yoyopod_liblinphone_shim",
)

LIBLINPHONE_SHIM_TESTS = [
    "abi",
    "event_queue",
]

yoyopod_rust_host_integration_tests(
    name = "tests",
    tests = LIBLINPHONE_SHIM_TESTS,
    deps = [":liblinphone_shim_lib"],
)
