[package]
name = "yoyopod-media"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "yoyopod-media-host"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
rand = "0.8"
time = { version = "0.3", features = ["formatting"] }
filetime = "0.2"
sha2 = "0.10"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
yoyopod-protocol = { path = "../protocol" }

[dev-dependencies]
yoyopod-harness = { path = "../harness" }
