load(
    "//:defs.bzl",
    "yoyopod_rust_host_binary",
    "yoyopod_rust_host_integration_tests",
    "yoyopod_rust_host_library",
)

yoyopod_rust_host_library(
    name = "network_host_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_name = "yoyopod_network",
    deps = ["//yoyopod_rs/protocol:protocol_lib"],
)

yoyopod_rust_host_binary(
    name = "yoyopod-network-host",
    srcs = ["src/main.rs"],
    deps = [":network_host_lib"],
)

NETWORK_HOST_TESTS = [
    "config",
    "gps",
    "lifecycle",
    "ppp",
    "protocol",
    "runtime_snapshot",
    "worker",
]

yoyopod_rust_host_integration_tests(
    name = "tests",
    tests = NETWORK_HOST_TESTS,
    deps = [
        ":network_host_lib",
        "//yoyopod_rs/harness:harness_lib",
    ],
    extra_srcs_by_test = {
        "lifecycle": ["tests/support/mod.rs"],
        "worker": ["tests/support/mod.rs"],
    },
)
