[package]
name = "yoyopod-network"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "yoyopod-network-host"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serialport = "4.7"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
yoyopod-protocol = { path = "../protocol" }

[dev-dependencies]
tempfile = "3.15"
yoyopod-harness = { path = "../harness" }
