load(
    "//:defs.bzl",
    "yoyopod_rust_host_binary",
    "yoyopod_rust_host_integration_tests",
    "yoyopod_rust_host_library",
)

yoyopod_rust_host_library(
    name = "power_host_lib",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = ["src/main.rs"],
    ),
    crate_name = "yoyopod_power",
    deps = [
        "//yoyopod_rs/protocol:protocol_lib",
        "//yoyopod_rs/worker:worker_lib",
    ],
)

yoyopod_rust_host_binary(
    name = "yoyopod-power-host",
    srcs = ["src/main.rs"],
    deps = [":power_host_lib"],
)

POWER_HOST_TESTS = [
    "config",
    "snapshot",
    "worker",
]

yoyopod_rust_host_integration_tests(
    name = "tests",
    tests = POWER_HOST_TESTS,
    deps = [
        ":power_host_lib",
        "//yoyopod_rs/harness:harness_lib",
    ],
)
