[package]
name = "yoyopod-speech"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "yoyopod-speech-host"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ureq = { version = "2.12", default-features = false, features = ["tls"] }
yoyopod-protocol = { path = "../protocol" }

[dev-dependencies]
yoyopod-harness = { path = "../harness" }
