[package]
name = "yoyopod-voip"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "yoyopod-voip-host"
path = "src/main.rs"

[features]
default = []
native-liblinphone = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting"] }
yoyopod-protocol = { path = "../protocol" }

[build-dependencies]
pkg-config = "0.3"

[dev-dependencies]
yoyopod-harness = { path = "../harness" }
